// Copyright (c) 2023 Cisco Systems, Inc. and its affiliates
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http:www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

option go_package = "./;awi";

message Security {
    message PolicyMetadata {
        string name = 1;
        string description = 2;
        map<string, string> labels = 3;
        string creationTimestamp = 4;
        string modificationTimestamp = 5;
    }

    message AccessPolicy {
        PolicyMetadata metadata = 1;
        message AccessProtocol {
            string protocol = 1;
            string port = 2;
        }
        repeated AccessProtocol accessProtocols = 2;
        string accessType = 3;
        int32 priority = 4;
    }
}
